--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node dist/index.js",
+    "dev": "npx ts-node-dev --respawn --transpile-only src/index.ts",
+    "build": "tsc --build",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -23,5 +26,11 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5",
     "typescript": "^5.7.3"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.14",
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5"
   }
 }
