--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node dist/index.js",
+    "start": "npm run build && node dist/index.js",
     "dev": "npx ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "tsc --build",
     "test": "jest"
